# cos-lma-comparator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  rename.sh  setup.cfg  setup.py  sonar-project.properties
clc/: __init__.py  __main__.py  cli.py  comparator.py  display.py  grafana.py  juju_helper.py  nagios.py  nrpedata.py  prometheus.py
clc/utils/: __init__.py  juju_cli_helper.py  juju_helper.py  structures.py
cos-lma-comparator/: __main__.py  comparator.py  juju_helper.py  main.py  nagios.py  prometheus.py  rules.py  services.py  structures.py
coslmacomp/: main.py
snap/: snapcraft.yaml
src/: juju-helper.py  nagios.py  prometheus.py
tests/: test_prometheus.py
tests/unit/: test_comparator.py  test_diff.py  test_nagios.py  test_nrpedata.py  test_prometheus.py  test_summary.py
