[metadata]
name = cos-lma-comparator
# See setup.py version generator
url = https://github.com/nishant-dash/cos-lma-comparator
description = Tool to compare nrpe data between LMA and COS
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Canonical BootStack
license = AGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3.0 (AGPL-3.0)
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.8
packages = find:

[options.extras_require]
lint =
    flake8
    flake8-docstrings
    flake8-colors
    pyproject-flake8
    pylint
    mypy
    black
    isort
    pylint
    mypy
    types-PyYAML
    codespell

unittests =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio
    aiounittest
    gevent

[options.packages.find]
exclude =
    tests

[options.package_data]
* =
    *.csv

[options.entry_points]
console_scripts =
    clc = clc:main

[aliases]
test = pytest
