[metadata]
name = cos-lma-comparator
url = 'https://github.com/nishant-dash/cos-lma-comparator'
description = Tool to compare nrpe data between LMA and COS
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Canonical BootStack
license = AGPL-3.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3.0 (AGPL-3.0)
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.8
packages = find:
install_requires =
    requests
    PyYAML

[options.entry_points]
console_scripts =
    clc = clc.cli:main

[options.packages.find]
exclude =
    tests

[options.extras_require]
lint =
    black
    codespell
    isort
    mypy
    pylint
    types-PyYAML

unittests =
    pytest
    pytest-cov
    pytest-mock
    pytest-asyncio

[options.package_data]
* =
    *.json

[aliases]
test = pytest
